use azure, openmetadata

--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -4,3 +4,5 @@ description: Infrastructure components
 config:
   snowflake:account: BQ47791.eu-central-1
   snowflake:role: DEPLOYMENT
+  pulumi:disable-default-providers:
+    - kubernetes
