--- a/charts/openmetadata-dependencies/Chart.yaml
+++ b/charts/openmetadata-dependencies/Chart.yaml
@@ -5,6 +5,6 @@ type: application
 version: 0.1.0
 appVersion: "1.16.0"
 dependencies:
-  - name: openmetadata
-    version: 1.2.4
+  - name: openmetadata-dependencies
+    version: 1.2.3
     repository: https://helm.open-metadata.org/
